logs/kitchensinkrpc.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/kitchensink'...
Listing './lib/python3.5/site-packages/kitchensink/admin'...
Listing './lib/python3.5/site-packages/kitchensink/api'...
Listing './lib/python3.5/site-packages/kitchensink/clients'...
Compiling './lib/python3.5/site-packages/kitchensink/clients/http.py'...
***   File "./lib/python3.5/site-packages/kitchensink/clients/http.py", line 110
    raise Exception, metadata['error']
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kitchensink/data'...
Compiling './lib/python3.5/site-packages/kitchensink/data/__init__.py'...
***   File "./lib/python3.5/site-packages/kitchensink/data/__init__.py", line 119
    raise KitchenSinkError, "Must be inside datadir"
                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kitchensink/rpc'...
Listing './lib/python3.5/site-packages/kitchensink/scripts'...
Listing './lib/python3.5/site-packages/kitchensink/serialization'...
Compiling './lib/python3.5/site-packages/kitchensink/serialization/cloudpickle.py'...
***   File "./lib/python3.5/site-packages/kitchensink/serialization/cloudpickle.py", line 141
    except RuntimeError, e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/kitchensink/taskqueue'...
Listing './lib/python3.5/site-packages/kitchensink/testutils'...
Compiling './lib/python3.5/site-packages/kitchensink/testutils/integration.py'...
***   File "./lib/python3.5/site-packages/kitchensink/testutils/integration.py", line 141
    print 'sleep'
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/kitchensink/utils'...
Listing './lib/python3.5/site-packages/kitchensinkRPC-0.2.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
